--- a/vagrant/release/devstack/Vagrantfile
+++ b/vagrant/release/devstack/Vagrantfile
@@ -47,7 +47,7 @@ openedx_releases = {
   "open-release/ginkgo.1rc1" => "ginkgo-devstack-2017-07-14",
   "open-release/ginkgo.1" => "ginkgo-devstack-2017-07-14",
 
-  "open-release/ficus.master" => "ficus-devstack-2017-02-07",
+  "open-release/hawthorn.beta1" => "ficus-devstack-2017-02-07",
   "open-release/ficus.1rc1" => "ficus-devstack-2017-01-11",
   "open-release/ficus.1rc3" => "ficus-devstack-2017-02-07",
   "open-release/ficus.1rc4" => "ficus-devstack-2017-02-07",
