--- a/playbooks/roles/edx_ansible/tasks/deploy.yml
+++ b/playbooks/roles/edx_ansible/tasks/deploy.yml
@@ -2,16 +2,16 @@
 - debug:
     msg: "Git checkout edx_ansible repo into edx_ansible_code_dir edx_ansible_code_dir {{ edx_ansible_code_dir }}   edx_ansible_source_repo  {{ edx_ansible_source_repo }}  configuration_version  {{ configuration_version }}"
 
-# name: Git checkout edx_ansible repo into edx_ansible_code_dir
-#  git:
-#   dest: "{{ edx_ansible_code_dir }}"
-#   repo: "{{ edx_ansible_source_repo }}"
-#   version: "{{ configuration_version }}"
-#   accept_hostkey: yes
-# become_user: "{{ edx_ansible_user }}"
-# tags:
-#   - install
-#   - install:code
+- name: Git checkout edx_ansible repo into edx_ansible_code_dir
+  git:
+   dest: "{{ edx_ansible_code_dir }}"
+   repo: "https://github.com/Microsoft/edx-configuration.git"
+   version: "{{ configuration_version }}"
+   accept_hostkey: yes
+ become_user: "{{ edx_ansible_user }}"
+ tags:
+   - install
+   - install:code
 
 - name: Install edx_ansible venv requirements
   pip:
