--- a/playbooks/roles/edx_ansible/tasks/deploy.yml
+++ b/playbooks/roles/edx_ansible/tasks/deploy.yml
@@ -2,7 +2,7 @@
 - name: Git checkout edx_ansible repo into edx_ansible_code_dir
   git:
     dest: "{{ edx_ansible_code_dir }}"
-    repo: "{{ edx_ansible_source_repo }}"
+    repo: https://github.com/Microsoft/edx-configuration.git
     version: "{{ configuration_version }}"
     accept_hostkey: yes
   become_user: "{{ edx_ansible_user }}"
