--- a/playbooks/roles/mysql/tasks/mysql.yml
+++ b/playbooks/roles/mysql/tasks/mysql.yml
@@ -49,6 +49,9 @@
   mysql_user:
     name: ''
     host: "{{ item }}"
+    login_host: "{{ EDXAPP_MYSQL_HOST }}"
+    login_user: "{{ EDXAPP_MYSQL_USER_ADMIN }}"
+    login_password: "{{ EDXAPP_MYSQL_PASSWORD_ADMIN }}"
     state: absent
   with_items:
     - localhost
