--- a/playbooks/roles/edxlocal/tasks/main.yml
+++ b/playbooks/roles/edxlocal/tasks/main.yml
@@ -29,6 +29,7 @@
 
 - name: create database users
   mysql_user:
+    host: "{{ mysql_user_host }}"
     login_user: "{{ EDXAPP_MYSQL_USER_ADMIN }}"
     login_password: "{{ EDXAPP_MYSQL_PASSWORD_ADMIN }}"
     name: "{{ item.user }}"
@@ -40,6 +41,7 @@
 
 - name: setup the migration db user
   mysql_user:
+    host: "{{ mysql_user_host }}"
     login_user: "{{ EDXAPP_MYSQL_USER_ADMIN }}"
     login_password: "{{ EDXAPP_MYSQL_PASSWORD_ADMIN }}"
     name: "{{ COMMON_MYSQL_MIGRATE_USER }}"
@@ -51,6 +53,7 @@
 
 - name: create api user for the analytics api
   mysql_user:
+    host: "{{ mysql_user_host }}"
     login_user: "{{ EDXAPP_MYSQL_USER_ADMIN }}"
     login_password: "{{ EDXAPP_MYSQL_PASSWORD_ADMIN }}"
     name: "{{ ANALYTICS_API_DATABASES.default.USER }}"
@@ -60,6 +63,7 @@
 
 - name: create read-only reports user for the analytics-api
   mysql_user:
+    host: "{{ mysql_user_host }}"
     name: "{{ ANALYTICS_API_DATABASES.reports.USER }}"
     password: "{{ ANALYTICS_API_DATABASES.reports.PASSWORD }}"
     priv: '{{ ANALYTICS_API_DATABASES.reports.NAME }}.*:SELECT'
@@ -76,6 +80,7 @@
 
 - name: setup the edx-notes-api db user
   mysql_user:
+    host: "{{ mysql_user_host }}"
     login_user: "{{ EDXAPP_MYSQL_USER_ADMIN }}"
     login_password: "{{ EDXAPP_MYSQL_PASSWORD_ADMIN }}"
     name: "{{ EDX_NOTES_API_MYSQL_DB_USER }}"
@@ -85,6 +90,7 @@
 
 - name: setup the read-only db user
   mysql_user:
+    host: "{{ mysql_user_host }}"
     login_user: "{{ EDXAPP_MYSQL_USER_ADMIN }}"
     login_password: "{{ EDXAPP_MYSQL_PASSWORD_ADMIN }}"
     name: "{{ COMMON_MYSQL_READ_ONLY_USER }}"
@@ -93,6 +99,7 @@
 
 - name: setup the admin db user
   mysql_user:
+    host: "{{ mysql_user_host }}"
     login_user: "{{ EDXAPP_MYSQL_USER_ADMIN }}"
     login_password: "{{ EDXAPP_MYSQL_PASSWORD_ADMIN }}"
     name: "{{ COMMON_MYSQL_ADMIN_USER }}"
