--- a/playbooks/roles/nginx/tasks/main.yml
+++ b/playbooks/roles/nginx/tasks/main.yml
@@ -82,10 +82,9 @@
     - install
     - install:system-requirements
 
-# Use the nginx-extras package for headers-more-nginx-module support 
 - name: Install the nginx package
   apt:
-    name: nginx-extras 
+    name: nginx
     state: latest
     update_cache: yes
   notify: restart nginx
