--- a/playbooks/roles/nginx/defaults/main.yml
+++ b/playbooks/roles/nginx/defaults/main.yml
@@ -58,6 +58,7 @@ NGINX_SET_X_FORWARDED_HEADERS: False
 NGINX_CMS_PROXY_CONNECT_TIMEOUT: !!null
 NGINX_CMS_PROXY_SEND_TIMEOUT: !!null
 NGINX_CMS_PROXY_READ_TIMEOUT: !!null
+NGINX_SSL_CIPHERS: "'ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA:ECDHE-RSA-AES128-SHA:AES256-SHA256:AES128-SHA256:AES256-SHA:AES128-SHA'"
 
 NGINX_SERVER_ERROR_IMG: 'https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Pendleton_Sinking_Ship.jpg/640px-Pendleton_Sinking_Ship.jpg'
 NGINX_SERVER_ERROR_IMG_ALT: ''
@@ -176,4 +177,4 @@ NGINX_EDXAPP_CMS_APP_EXTRA: ""
 NGINX_EDXAPP_LMS_APP_EXTRA: ""
 
 NGINX_DJANGO_ADMIN_ACCESS_CIDRS: []
-
+NGINX_X_CONTENT_SECURITY_POLICY_HEADER: "default-src 'self' *.edx.org *.microsoft.com www.bing.com tags.tiqcdn.com az725175.vo.msecnd.net *.tealiumiq.com mscom.demdex.net googleads.g.doubleclick.net www.google.com;"
