Adding azure storage configuration

--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -1065,6 +1065,9 @@ edxapp_generic_auth_config:  &edxapp_generic_auth
   AWS_QUERYSTRING_AUTH: "{{ EDXAPP_AWS_QUERYSTRING_AUTH }}"
   AWS_STORAGE_BUCKET_NAME: "{{ EDXAPP_AWS_STORAGE_BUCKET_NAME }}"
   AWS_S3_CUSTOM_DOMAIN: "{{ EDXAPP_AWS_S3_CUSTOM_DOMAIN }}"
+  AZURE_ACCOUNT_KEY: "{{ EDXAPP_AZURE_ACCOUNT_KEY }}"
+  AZURE_ACCOUNT_NAME: "{{ EDXAPP_AZURE_ACCOUNT_NAME }}"
+  AZURE_CONTAINER: "{{ EDXAPP_AZURE_CONTAINER }}"
   SWIFT_USERNAME: "{{ EDXAPP_SWIFT_USERNAME }}"
   SWIFT_KEY: "{{ EDXAPP_SWIFT_KEY }}"
   SWIFT_TENANT_ID: "{{ EDXAPP_SWIFT_TENANT_ID }}"
