--- a/playbooks/edx-stateful.yml
+++ b/playbooks/edx-stateful.yml
@@ -20,6 +20,20 @@
     openid_workaround: True
     EDXAPP_LMS_NGINX_PORT: '80'
     ENABLE_ECOMMERCE: False  # Disable ecommerce by default
+
+  vars_files:
+    - "roles/analytics_api/defaults/main.yml"
+    - "roles/ecommerce/defaults/main.yml"
+    - "roles/insights/defaults/main.yml"
+    - "roles/xqueue/defaults/main.yml"
+    - "roles/edxapp/defaults/main.yml"
+    - "roles/edx_notes_api/defaults/main.yml"
+    - "roles/credentials/defaults/main.yml"
+    - "roles/discovery/defaults/main.yml"
+    - "roles/journals/defaults/main.yml"
+    - "roles/veda_web_frontend/defaults/main.yml"
+    - "roles/video_pipeline_base/defaults/main.yml"
+
   roles:
 
     # Ensure we have no known security vulnerabilities
@@ -29,7 +43,7 @@
     - swapfile
 
     # Nginx reverse proxy
-    - role: azure-mysql
+    - azure_mysql
       
     # Main EdX application
     # https://github.com/edx/edx-platform
