--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -303,8 +303,8 @@ EDXAPP_FEATURES:
   ENABLE_SPECIAL_EXAMS: false
   ENABLE_OAUTH2_PROVIDER: "{{ EDXAPP_ENABLE_OAUTH2_PROVIDER }}"
   ENABLE_SYSADMIN_DASHBOARD: "{{ EDXAPP_ENABLE_SYSADMIN_DASHBOARD }}"
-  ENABLE_COURSE_DISCOVERY: : "{{ EDXAPP_ENABLE_COURSE_DISCOVERY }}"
-  ENABLE_DASHBOARD_TABS: : "{{ EDXAPP_ENABLE_DASHBOARD_TABS }}"
+  ENABLE_COURSE_DISCOVERY: "{{ EDXAPP_ENABLE_COURSE_DISCOVERY }}"
+  ENABLE_DASHBOARD_TABS: "{{ EDXAPP_ENABLE_DASHBOARD_TABS }}"
   ENABLE_MOBILE_REST_API: "{{ EDXAPP_ENABLE_MOBILE_REST_API }}"
   CUSTOM_COURSES_EDX: "{{ EDXAPP_CUSTOM_COURSES_EDX }}"
   ENABLE_CSMH_EXTENDED: "{{ EDXAPP_ENABLE_CSMH_EXTENDED }}"
