Apply General Rollout Fixes (#406)

--- a/playbooks/roles/azure_mysql/tasks/main.yml
+++ b/playbooks/roles/azure_mysql/tasks/main.yml
@@ -22,7 +22,7 @@
 - name: create databases
   mysql_db:
     db: "{{ item }}"
-    login_user: "{{ EDXAPP_MYSQL_USER_ADMIN }@{{ EDXAPP_MYSQL_CLOUD_SERVER_NAME }}"
+    login_user: "{{ EDXAPP_MYSQL_USER_ADMIN.split('@')[0] }}@{{ EDXAPP_MYSQL_CLOUD_SERVER_NAME }}"
     login_password: "{{ EDXAPP_MYSQL_PASSWORD_ADMIN }}"
     login_host: "{{ MYSQL_SERVER_FQDN }}"
     ssl_ca: "{{ AZURE_MYSQL_SSL_CA }}"
@@ -34,11 +34,11 @@
 - name: create database users
   mysql_user:
     host: "{{ mysql_user_host }}"
-    login_user: "{{ EDXAPP_MYSQL_USER_ADMIN }@{{ EDXAPP_MYSQL_CLOUD_SERVER_NAME }}"
+    login_user: "{{ EDXAPP_MYSQL_USER_ADMIN.split('@')[0] }}@{{ EDXAPP_MYSQL_CLOUD_SERVER_NAME }}"
     login_password: "{{ EDXAPP_MYSQL_PASSWORD_ADMIN }}"
     login_host: "{{ MYSQL_SERVER_FQDN }}"
     ssl_ca: "{{ AZURE_MYSQL_SSL_CA }}"	
-    name: "{{ item.user }}"
+    name: "{{ item.user.split('@')[0] }}"
     password: "{{ item.pass }}"
     priv: "{{ item.db }}.*:ALL"
     append_privs: yes
@@ -48,11 +48,11 @@
 - name: setup the migration db user
   mysql_user:
     host: "{{ mysql_user_host }}"
-    login_user: "{{ EDXAPP_MYSQL_USER_ADMIN }@{{ EDXAPP_MYSQL_CLOUD_SERVER_NAME }}"
+    login_user: "{{ EDXAPP_MYSQL_USER_ADMIN.split('@')[0] }}@{{ EDXAPP_MYSQL_CLOUD_SERVER_NAME }}"
     login_password: "{{ EDXAPP_MYSQL_PASSWORD_ADMIN }}"
     login_host: "{{ MYSQL_SERVER_FQDN }}"
     ssl_ca: "{{ AZURE_MYSQL_SSL_CA }}"
-    name: "{{ COMMON_MYSQL_MIGRATE_USER }}"
+    name: "{{ COMMON_MYSQL_MIGRATE_USER.split('@')[0] }}"
     password: "{{ COMMON_MYSQL_MIGRATE_PASS }}"
     priv: "{{ item }}.*:ALL"
     append_privs: yes
@@ -62,11 +62,11 @@
 - name: create api user for the analytics api
   mysql_user:
     host: "{{ mysql_user_host }}"
-    login_user: "{{ EDXAPP_MYSQL_USER_ADMIN }@{{ EDXAPP_MYSQL_CLOUD_SERVER_NAME }}"
+    login_user: "{{ EDXAPP_MYSQL_USER_ADMIN.split('@')[0] }}@{{ EDXAPP_MYSQL_CLOUD_SERVER_NAME }}"
     login_password: "{{ EDXAPP_MYSQL_PASSWORD_ADMIN }}"
     login_host: "{{ MYSQL_SERVER_FQDN }}"
     ssl_ca: "{{ AZURE_MYSQL_SSL_CA }}"
-    name: "{{ ANALYTICS_API_DATABASES.default.USER }}"
+    name: "{{ ANALYTICS_API_DATABASES.default.USER.split('@')[0] }}"
     password: "{{ ANALYTICS_API_DATABASES.default.PASSWORD }}"
     priv: '{{ ANALYTICS_API_DATABASES.default.NAME }}.*:ALL/reports.*:SELECT'
   when: ANALYTICS_API_DATABASES.default is defined
@@ -74,11 +74,11 @@
 - name: create read-only reports user for the analytics-api
   mysql_user:
     host: "{{ mysql_user_host }}"
-    login_user: "{{ EDXAPP_MYSQL_USER_ADMIN }@{{ EDXAPP_MYSQL_CLOUD_SERVER_NAME }}"
+    login_user: "{{ EDXAPP_MYSQL_USER_ADMIN.split('@')[0] }}@{{ EDXAPP_MYSQL_CLOUD_SERVER_NAME }}"
     login_password: "{{ EDXAPP_MYSQL_PASSWORD_ADMIN }}"
     login_host: "{{ MYSQL_SERVER_FQDN }}"
     ssl_ca: "{{ AZURE_MYSQL_SSL_CA }}"
-    name: "{{ ANALYTICS_API_DATABASES.reports.USER }}"
+    name: "{{ ANALYTICS_API_DATABASES.reports.USER.split('@')[0] }}"
     password: "{{ ANALYTICS_API_DATABASES.reports.PASSWORD }}"
     priv: '{{ ANALYTICS_API_DATABASES.reports.NAME }}.*:SELECT'
   when: ANALYTICS_API_DATABASES.reports is defined
@@ -86,7 +86,7 @@
 - name: create a database for the hive metastore
   mysql_db:
     host: "{{ mysql_user_host }}"
-    login_user: "{{ EDXAPP_MYSQL_USER_ADMIN }@{{ EDXAPP_MYSQL_CLOUD_SERVER_NAME }}"
+    login_user: "{{ EDXAPP_MYSQL_USER_ADMIN.split('@')[0] }}@{{ EDXAPP_MYSQL_CLOUD_SERVER_NAME }}"
     login_password: "{{ EDXAPP_MYSQL_PASSWORD_ADMIN }}"
     login_host: "{{ MYSQL_SERVER_FQDN }}"
     ssl_ca: "{{ AZURE_MYSQL_SSL_CA }}"
@@ -98,11 +98,11 @@
 - name: setup the edx-notes-api db user
   mysql_user:
     host: "{{ mysql_user_host }}"
-    login_user: "{{ EDXAPP_MYSQL_USER_ADMIN }@{{ EDXAPP_MYSQL_CLOUD_SERVER_NAME }}"
+    login_user: "{{ EDXAPP_MYSQL_USER_ADMIN.split('@')[0] }}@{{ EDXAPP_MYSQL_CLOUD_SERVER_NAME }}"
     login_password: "{{ EDXAPP_MYSQL_PASSWORD_ADMIN }}"
     login_host: "{{ MYSQL_SERVER_FQDN }}"
     ssl_ca: "{{ AZURE_MYSQL_SSL_CA }}"
-    name: "{{ EDX_NOTES_API_MYSQL_DB_USER }}"
+    name: "{{ EDX_NOTES_API_MYSQL_DB_USER.split('@')[0] }}"
     password: "{{ EDX_NOTES_API_MYSQL_DB_PASS }}"
     priv: "{{ EDX_NOTES_API_MYSQL_DB_NAME }}.*:SELECT,INSERT,UPDATE,DELETE"
   when: EDX_NOTES_API_MYSQL_DB_USER is defined
@@ -110,21 +110,21 @@
 - name: setup the read-only db user
   mysql_user:
     host: "{{ mysql_user_host }}"
-    login_user: "{{ EDXAPP_MYSQL_USER_ADMIN }@{{ EDXAPP_MYSQL_CLOUD_SERVER_NAME }}"
+    login_user: "{{ EDXAPP_MYSQL_USER_ADMIN.split('@')[0] }}@{{ EDXAPP_MYSQL_CLOUD_SERVER_NAME }}"
     login_password: "{{ EDXAPP_MYSQL_PASSWORD_ADMIN }}"
     login_host: "{{ MYSQL_SERVER_FQDN }}"
     ssl_ca: "{{ AZURE_MYSQL_SSL_CA }}"
-    name: "{{ COMMON_MYSQL_READ_ONLY_USER }}"
+    name: "{{ COMMON_MYSQL_READ_ONLY_USER.split('@')[0] }}"
     password: "{{ COMMON_MYSQL_READ_ONLY_PASS }}"
     priv: "*.*:SELECT"
 
 - name: setup the admin db user
   mysql_user:
     host: "{{ mysql_user_host }}"
-    login_user: "{{ EDXAPP_MYSQL_USER_ADMIN }@{{ EDXAPP_MYSQL_CLOUD_SERVER_NAME }}"
+    login_user: "{{ EDXAPP_MYSQL_USER_ADMIN.split('@')[0] }}@{{ EDXAPP_MYSQL_CLOUD_SERVER_NAME }}"
     login_password: "{{ EDXAPP_MYSQL_PASSWORD_ADMIN }}"
     login_host: "{{ MYSQL_SERVER_FQDN }}"
     ssl_ca: "{{ AZURE_MYSQL_SSL_CA }}"
-    name: "{{ COMMON_MYSQL_ADMIN_USER }}"
+    name: "{{ COMMON_MYSQL_ADMIN_USER.split('@')[0] }}"
     password: "{{ COMMON_MYSQL_ADMIN_PASS }}"
     priv: "*.*:CREATE USER"
