--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -307,7 +307,7 @@ EDXAPP_FEATURES:
   ENABLE_CORS_HEADERS: false
   ENABLE_CROSS_DOMAIN_CSRF_COOKIE: false
   ENABLE_COUNTRY_ACCESS: false
-  ENABLE_CUSTOM_AUTH: "{{ EDXAPP_ENABLE_CUSTOM_AUTH }}",
+  ENABLE_CUSTOM_AUTH: "{{ EDXAPP_ENABLE_CUSTOM_AUTH }}"
   ENABLE_EDXNOTES: "{{ EDXAPP_ENABLE_EDXNOTES }}"
   ENABLE_CREDIT_API: "{{ EDXAPP_ENABLE_CREDIT_API }}"
   ENABLE_CREDIT_ELIGIBILITY: "{{ EDXAPP_ENABLE_CREDIT_ELIGIBILITY }}"
