--- a/playbooks/roles/nginx/defaults/main.yml
+++ b/playbooks/roles/nginx/defaults/main.yml
@@ -61,6 +61,7 @@ NGINX_CMS_PROXY_SEND_TIMEOUT: !!null
 NGINX_CMS_PROXY_READ_TIMEOUT: !!null
 
 NGINX_SERVER_ERROR_IMG: 'https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Pendleton_Sinking_Ship.jpg/640px-Pendleton_Sinking_Ship.jpg'
+NGINX_SERVER_MAINTENANCE_IMG: 'https://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Under_construction_icon-yellow.svg/288px-Under_construction_icon-yellow.svg.png'
 NGINX_SERVER_ERROR_IMG_ALT: ''
 NGINX_SERVER_ERROR_LANG: 'en'
 NGINX_SERVER_ERROR_STYLE_H1: 'font-family: "Helvetica Neue",Helvetica,Roboto,Arial,sans-serif; margin-bottom: .3em; font-size: 2.0em; line-height: 1.25em; text-rendering: optimizeLegibility; font-weight: bold; color: #000000;'
@@ -90,6 +91,17 @@ NGINX_SERVER_HTML_FILES:
     style_p_h2: "{{ NGINX_SERVER_ERROR_STYLE_P_H2 }}"
     style_p: "{{ NGINX_SERVER_ERROR_STYLE_P }}"
     style_div: "{{ NGINX_SERVER_ERROR_STYLE_DIV }}"
+  - file: maintenance.html
+    lang: "{{ NGINX_SERVER_ERROR_LANG }}"
+    title: ''
+    msg: 'Sorry for the inconvenience but we&rsquo;re currently performing site maintenance. We&rsquo;ll be back online shortly.'
+    img: "{{ NGINX_SERVER_MAINTENANCE_IMG }}"
+    img_alt: "{{ NGINX_SERVER_ERROR_IMG_ALT }}"
+    heading: 'We&rsquo;ll be back soon!'
+    style_h1: "{{ NGINX_SERVER_ERROR_STYLE_H1 }}"
+    style_p_h2: "{{ NGINX_SERVER_ERROR_STYLE_P_H2 }}"
+    style_p: "{{ NGINX_SERVER_ERROR_STYLE_P }}"
+    style_div: "{{ NGINX_SERVER_ERROR_STYLE_DIV }}"
 
 NGINX_APT_REPO: deb http://nginx.org/packages/ubuntu/ {{ ansible_distribution_release }} nginx
 
@@ -108,7 +120,9 @@ nginx_debian_pkgs:
   - python-passlib
 
 NGINX_EDXAPP_ENABLE_S3_MAINTENANCE: False
+NGINX_EDXAPP_ENABLE_MAINTENANCE: True
 nginx_default_error_page: "/server/server-error.html"
+nginx_default_maintenance_page: "/server/maintenance.html"
 NGINX_EDXAPP_ERROR_PAGES:
   "500": "{{ nginx_default_error_page }}"
   "502": "{{ nginx_default_error_page }}"
