--- a/playbooks/roles/rbenv/tasks/main.yml
+++ b/playbooks/roles/rbenv/tasks/main.yml
@@ -188,7 +188,7 @@
     - install:base
 
 - name: update rubygems
-  shell: "gem install rubygems-update && update_rubygems"
+  shell: "gem update --system {{ rbenv_rubygems_version }}"
   become_user: "{{ rbenv_user }}"
   environment: "{{ rbenv_environment }}"
   tags:
