--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -234,6 +234,17 @@ EDXAPP_ENABLE_DASHBOARD_TABS: true
 # Making Honor mode eligible for certificate
 EDXAPP_ENABLE_CERTIFICATES_FOR_HONOR_MODE: true
 
+# Azure key-vault configurations
+EDXAPP_GET_SECRETS_FROM_AZURE_KEYVAULT: false
+EDXAPP_AZURE_MSI_REQUEST_URI: ''
+EDXAPP_KEYVAULT_PAYLOAD: ''
+EDXAPP_KEYVAULT_URL: ''
+EDXAPP_KEYVAULT_API_VERSION: ''
+EDXAPP_LMS_NON_SECURE_KEY_NAME: ''
+EDXAPP_LMS_SECURE_KEY_NAME: ''
+EDXAPP_CMS_NON_SECURE_KEY_NAME: ''
+EDXAPP_CMS_SECURE_KEY_NAME: ''
+
 # Social Django defaults to HTTP scheme when generating redirect_uri
 # It is therefore necessary to add this setting in order to support
 # changing the redirect_uri to HTTPS. Defaulting to False (default behavior)
@@ -291,6 +302,9 @@ EDXAPP_SHOW_HEADER_LANGUAGE_SELECTOR: false
 
 # Display a language selector in the LMS footer.
 EDXAPP_SHOW_FOOTER_LANGUAGE_SELECTOR: false
+
+# Configure x_frame_options in LMS/CMS
+EDXAPP_X_FRAME_OPTIONS: "DENY"
 
 EDXAPP_FEATURES:
   AUTH_USE_OPENID_PROVIDER: true
@@ -1457,6 +1471,14 @@ lms_env_config:
   GOOGLE_SITE_VERIFICATION_ID: "{{ EDXAPP_GOOGLE_SITE_VERIFICATION_ID }}"
   STATIC_URL_BASE: "{{ EDXAPP_LMS_STATIC_URL_BASE }}"
   LMS_ALLOWED_HOSTS: "{{ EDXAPP_LMS_ALLOWED_HOSTS }}"
+  GET_SECRETS_FROM_AZURE_KEYVAULT: "{{ EDXAPP_GET_SECRETS_FROM_AZURE_KEYVAULT }}"
+  AZURE_MSI_REQUEST_URI: "{{ EDXAPP_AZURE_MSI_REQUEST_URI }}"
+  KEYVAULT_PAYLOAD: "{{ EDXAPP_KEYVAULT_PAYLOAD }}"
+  KEYVAULT_URL: "{{ EDXAPP_KEYVAULT_URL }}"
+  LMS_NON_SECURE_KEY_NAME: "{{ EDXAPP_LMS_NON_SECURE_KEY_NAME }}"
+  LMS_SECURE_KEY_NAME: "{{ EDXAPP_LMS_SECURE_KEY_NAME }}"
+  KEYVAULT_API_VERSION: "{{ EDXAPP_KEYVAULT_API_VERSION }}"
+  X_FRAME_OPTIONS: "{{ EDXAPP_X_FRAME_OPTIONS }}"
 
 cms_auth_config:
   <<: *edxapp_generic_auth
@@ -1498,6 +1520,14 @@ cms_env_config:
   COURSE_IMPORT_EXPORT_BUCKET: "{{ EDXAPP_IMPORT_EXPORT_BUCKET }}"
   STATIC_URL_BASE: "{{ EDXAPP_CMS_STATIC_URL_BASE }}"
   CMS_ALLOWED_HOSTS: "{{ EDXAPP_CMS_ALLOWED_HOSTS }}"
+  GET_SECRETS_FROM_AZURE_KEYVAULT: "{{ EDXAPP_GET_SECRETS_FROM_AZURE_KEYVAULT }}"
+  AZURE_MSI_REQUEST_URI: "{{ EDXAPP_AZURE_MSI_REQUEST_URI }}"
+  KEYVAULT_PAYLOAD: "{{ EDXAPP_KEYVAULT_PAYLOAD }}"
+  KEYVAULT_URL: "{{ EDXAPP_KEYVAULT_URL }}"
+  CMS_NON_SECURE_KEY_NAME: "{{ EDXAPP_CMS_NON_SECURE_KEY_NAME }}"
+  CMS_SECURE_KEY_NAME: "{{ EDXAPP_CMS_SECURE_KEY_NAME }}"
+  KEYVAULT_API_VERSION: "{{ EDXAPP_KEYVAULT_API_VERSION }}"
+  X_FRAME_OPTIONS: "{{ EDXAPP_X_FRAME_OPTIONS }}"
 
 # install dir for the edx-platform repo
 edxapp_code_dir: "{{ edxapp_app_dir }}/edx-platform"
