Update Rubygems version to 3.0.0 (#501)
* dev to release (#409)

* Fix issue with rubygems 3.0.0 by pinning it to 2.7.8

* remove extra tab

* remove extra spaces

*  fix_ruby installation

* reverting changes to rbenv tasks

* fix for ruby installtion in deployments (#411) (#412)

--- a/playbooks/roles/rbenv/tasks/main.yml
+++ b/playbooks/roles/rbenv/tasks/main.yml
@@ -188,13 +188,13 @@
     - install:base
 
 - name: update rubygems
-  shell: "gem install rubygems-update && update_rubygems"
+  shell: "gem update --system {{ rbenv_rubygems_version }}"
   become_user: "{{ rbenv_user }}"
   environment: "{{ rbenv_environment }}"
   tags:
     - install
     - install:base
-    
+
 - name: rehash
   shell: "rbenv rehash"
   become_user: "{{ rbenv_user }}"
