--- a/playbooks/roles/nginx/defaults/main.yml
+++ b/playbooks/roles/nginx/defaults/main.yml
@@ -121,6 +121,7 @@ nginx_debian_pkgs:
 
 NGINX_EDXAPP_ENABLE_S3_MAINTENANCE: False
 NGINX_EDXAPP_ENABLE_MAINTENANCE: False
+NGINX_EDXAPP_ENABLE_OXA_REDIRECT: False
 nginx_default_error_page: "/server/server-error.html"
 nginx_default_maintenance_page: "/server/maintenance.html"
 NGINX_EDXAPP_ERROR_PAGES:
@@ -129,6 +130,8 @@ NGINX_EDXAPP_ERROR_PAGES:
   "504": "{{ nginx_default_error_page }}"
 
 CMS_HOSTNAME: '~^((stage|prod)-)?studio.*'
+LMS_HOSTNAME: !!null
+OLD_LMS_HOSTNAME: !!null
 
 nginx_template_dir: "edx/app/nginx/sites-available"
 
